# AdventOfCode

./: README.md
2023/day_1/: makefile  part_1.cpp  part_1.rs  part_2  part_2.cpp
2023/day_1/src/: part_1.cpp  part_2.cpp
2023/day_2/: README.txt  makefile  part_1  part_1.cpp  part_2  part_2.cpp
2023/day_2/src/: part_1.cpp  part_2.cpp
2023/day_3/: README.txt  makefile  part_1  part_1.cpp
2023/day_3/src/: part_1.cpp  part_2.cpp
2025/: .gitignore  CMakeLists.txt  README.md
2025/.cache/clangd/index/: day1_1.cpp.792C2EEB0BB43237.idx  day1_2.cpp.0042059A652B91BA.idx  main.cpp.2204B84DDDD26BB5.idx
2025/src/: day1_1.cpp  day1_2.cpp  day2_1.cpp  day2_2.cpp  day3_1.cpp  main.cpp
